# Software2_Project

./: .gitignore  CMakeLists.txt  README.md
assets/: level1.txt  level2.txt  level3.txt
src/: Level.cpp  Level.h  Obstacle.cpp  Obstacle.h  basicMenu.h  camera.h  main.cpp  player.h
